# MS_demographics_inference

./: .gitignore  README.md  age_prediction.ipynb  bigquery_query.py  gender_prediction.ipynb  pyproject.toml  tucker_decomposition.py
