[project]
name = "demographic-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.36.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "psutil>=7.0.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "tensorly>=0.9.0",
]
